改成在MSGame開發 素材folder移到外層 完成Create Setup file

--- a/MapleStory/game.vcxproj.filters
+++ b/MapleStory/game.vcxproj.filters
@@ -173,4 +173,9 @@
       <Filter>MFC</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="res\bitmap3.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
