--- a/MSGame/game.vcxproj
+++ b/MSGame/game.vcxproj
@@ -323,7 +323,8 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="Resource\game.ico" />
+    <Image Include="Resource\Stage1BG.bmp" />
+    <Image Include="res\game.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
