create ladder class

--- a/MSGame/game.vcxproj.filters
+++ b/MSGame/game.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClCompile Include="Source\Platform.cpp">
       <Filter>MyGame</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Ladder.cpp">
+      <Filter>MyGame</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\audio.h">
@@ -177,6 +180,9 @@
       <Filter>MyGame</Filter>
     </ClInclude>
     <ClInclude Include="Source\Platform.h">
+      <Filter>MyGame</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Ladder.h">
       <Filter>MyGame</Filter>
     </ClInclude>
   </ItemGroup>
