stage2bg modified

--- a/MSGame/game.vcxproj
+++ b/MSGame/game.vcxproj
@@ -381,6 +381,7 @@
     <Image Include="Resource\Monster\snake_left.bmp" />
     <Image Include="Resource\Monster\snake_right.bmp" />
     <Image Include="Resource\Stage1BG.bmp" />
+    <Image Include="Resource\Stage2BG.bmp" />
     <Image Include="res\bitmap3.bmp" />
     <Image Include="res\game.ico" />
   </ItemGroup>
