--- a/MSGame/game.vcxproj
+++ b/MSGame/game.vcxproj
@@ -285,6 +285,7 @@
     </ClCompile>
     <ClCompile Include="Source\Monster.cpp" />
     <ClCompile Include="Source\Platform.cpp" />
+    <ClCompile Include="Source\StageMap.cpp" />
     <ClCompile Include="Source\StdAfx.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -320,6 +321,7 @@
     <ClInclude Include="Source\Monster.h" />
     <ClInclude Include="Source\Platform.h" />
     <ClInclude Include="Source\Resource.h" />
+    <ClInclude Include="Source\StageMap.h" />
     <ClInclude Include="Source\StdAfx.h" />
     <ClInclude Include="Source\gamelib.h" />
     <ClInclude Include="Source\mygame.h" />
