--- a/MSGame/game.vcxproj.filters
+++ b/MSGame/game.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClCompile Include="Source\Monster.cpp">
       <Filter>MyGame</Filter>
     </ClCompile>
+    <ClCompile Include="Source\StageMap.cpp">
+      <Filter>MyGame</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\audio.h">
@@ -189,6 +192,9 @@
       <Filter>MyGame</Filter>
     </ClInclude>
     <ClInclude Include="Source\Monster.h">
+      <Filter>MyGame</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\StageMap.h">
       <Filter>MyGame</Filter>
     </ClInclude>
   </ItemGroup>
