--- a/MSGame/game.vcxproj.filters
+++ b/MSGame/game.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClCompile Include="Source\StageMap.cpp">
       <Filter>MyGame</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Player.cpp">
+      <Filter>MyGame</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\audio.h">
@@ -195,6 +198,9 @@
       <Filter>MyGame</Filter>
     </ClInclude>
     <ClInclude Include="Source\StageMap.h">
+      <Filter>MyGame</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Player.h">
       <Filter>MyGame</Filter>
     </ClInclude>
   </ItemGroup>
