upload stage 1 2 text monster

--- a/MSGame/game.vcxproj
+++ b/MSGame/game.vcxproj
@@ -362,7 +362,54 @@
     <Image Include="Resource\Character\character_right_stand.bmp" />
     <Image Include="Resource\Character\character_right_walk1.bmp" />
     <Image Include="Resource\Character\character_right_walk2.bmp" />
+    <Image Include="Resource\gameover.png" />
     <Image Include="Resource\menu.bmp" />
+    <Image Include="Resource\Monster\green\green_left1.bmp" />
+    <Image Include="Resource\Monster\green\green_left2.bmp" />
+    <Image Include="Resource\Monster\green\green_left_die1.bmp" />
+    <Image Include="Resource\Monster\green\green_left_die2.bmp" />
+    <Image Include="Resource\Monster\green\green_left_die3.bmp" />
+    <Image Include="Resource\Monster\green\green_left_die4.bmp" />
+    <Image Include="Resource\Monster\green\green_left_hurt.bmp" />
+    <Image Include="Resource\Monster\green\green_left_walk1.bmp" />
+    <Image Include="Resource\Monster\green\green_left_walk2.bmp" />
+    <Image Include="Resource\Monster\green\green_left_walk3.bmp" />
+    <Image Include="Resource\Monster\green\green_left_walk4.bmp" />
+    <Image Include="Resource\Monster\green\green_left_walk5.bmp" />
+    <Image Include="Resource\Monster\green\green_left_walk6.bmp" />
+    <Image Include="Resource\Monster\green\green_left_walk7.bmp" />
+    <Image Include="Resource\Monster\green\green_right1.bmp" />
+    <Image Include="Resource\Monster\green\green_right2.bmp" />
+    <Image Include="Resource\Monster\green\green_right_die1.bmp" />
+    <Image Include="Resource\Monster\green\green_right_die2.bmp" />
+    <Image Include="Resource\Monster\green\green_right_die3.bmp" />
+    <Image Include="Resource\Monster\green\green_right_die4.bmp" />
+    <Image Include="Resource\Monster\green\green_right_hurt.bmp" />
+    <Image Include="Resource\Monster\green\green_right_walk1.bmp" />
+    <Image Include="Resource\Monster\green\green_right_walk2.bmp" />
+    <Image Include="Resource\Monster\green\green_right_walk3.bmp" />
+    <Image Include="Resource\Monster\green\green_right_walk4.bmp" />
+    <Image Include="Resource\Monster\green\green_right_walk5.bmp" />
+    <Image Include="Resource\Monster\green\green_right_walk6.bmp" />
+    <Image Include="Resource\Monster\green\green_right_walk7.bmp" />
+    <Image Include="Resource\Monster\mushroom\mushroom_left1.bmp" />
+    <Image Include="Resource\Monster\mushroom\mushroom_left2.bmp" />
+    <Image Include="Resource\Monster\mushroom\mushroom_left_die1.bmp" />
+    <Image Include="Resource\Monster\mushroom\mushroom_left_die2.bmp" />
+    <Image Include="Resource\Monster\mushroom\mushroom_left_die3.bmp" />
+    <Image Include="Resource\Monster\mushroom\mushroom_left_hurt.bmp" />
+    <Image Include="Resource\Monster\mushroom\mushroom_left_walk1.bmp" />
+    <Image Include="Resource\Monster\mushroom\mushroom_left_walk2.bmp" />
+    <Image Include="Resource\Monster\mushroom\mushroom_left_walk3.bmp" />
+    <Image Include="Resource\Monster\mushroom\mushroom_right1.bmp" />
+    <Image Include="Resource\Monster\mushroom\mushroom_right2.bmp" />
+    <Image Include="Resource\Monster\mushroom\mushroom_right_die1.bmp" />
+    <Image Include="Resource\Monster\mushroom\mushroom_right_die2.bmp" />
+    <Image Include="Resource\Monster\mushroom\mushroom_right_die3.bmp" />
+    <Image Include="Resource\Monster\mushroom\mushroom_right_hurt.bmp" />
+    <Image Include="Resource\Monster\mushroom\mushroom_right_walk1.bmp" />
+    <Image Include="Resource\Monster\mushroom\mushroom_right_walk2.bmp" />
+    <Image Include="Resource\Monster\mushroom\mushroom_right_walk3.bmp" />
     <Image Include="Resource\Monster\snail\snail_left.bmp" />
     <Image Include="Resource\Monster\snail\snail_left_die1.bmp" />
     <Image Include="Resource\Monster\snail\snail_left_die2.bmp" />
@@ -382,15 +429,36 @@
     <Image Include="Resource\Monster\snail_left.bmp" />
     <Image Include="Resource\Monster\snail_right.bmp" />
     <Image Include="Resource\Monster\snake\snake_left.bmp" />
+    <Image Include="Resource\Monster\snake\snake_left1.bmp" />
+    <Image Include="Resource\Monster\snake\snake_left2.bmp" />
+    <Image Include="Resource\Monster\snake\snake_left_die1.bmp" />
+    <Image Include="Resource\Monster\snake\snake_left_die2.bmp" />
+    <Image Include="Resource\Monster\snake\snake_left_die3.bmp" />
+    <Image Include="Resource\Monster\snake\snake_left_hurt.bmp" />
+    <Image Include="Resource\Monster\snake\snake_left_walk1.bmp" />
+    <Image Include="Resource\Monster\snake\snake_left_walk2.bmp" />
+    <Image Include="Resource\Monster\snake\snake_left_walk3.bmp" />
     <Image Include="Resource\Monster\snake\snake_right.bmp" />
+    <Image Include="Resource\Monster\snake\snake_right1.bmp" />
+    <Image Include="Resource\Monster\snake\snake_right2.bmp" />
+    <Image Include="Resource\Monster\snake\snake_right_die1.bmp" />
+    <Image Include="Resource\Monster\snake\snake_right_die2.bmp" />
+    <Image Include="Resource\Monster\snake\snake_right_die3.bmp" />
+    <Image Include="Resource\Monster\snake\snake_right_hurt.bmp" />
+    <Image Include="Resource\Monster\snake\snake_right_walk1.bmp" />
+    <Image Include="Resource\Monster\snake\snake_right_walk2.bmp" />
+    <Image Include="Resource\Monster\snake\snake_right_walk3.bmp" />
     <Image Include="Resource\Monster\snake_left.bmp" />
     <Image Include="Resource\Monster\snake_right.bmp" />
     <Image Include="Resource\Stage1BG.bmp" />
+    <Image Include="Resource\stage1text.bmp" />
     <Image Include="Resource\Stage2BG.bmp" />
+    <Image Include="Resource\stage2text.bmp" />
     <Image Include="Resource\Stage3BG.bmp" />
     <Image Include="Resource\startbutton.bmp" />
     <Image Include="Resource\startbutton2.bmp" />
     <Image Include="res\bitmap3.bmp" />
+    <Image Include="res\bitmap7.bmp" />
     <Image Include="res\game.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
