add gameover stage3text success characterdie bitmaps

--- a/MSGame/game.vcxproj
+++ b/MSGame/game.vcxproj
@@ -352,16 +352,21 @@
     <Image Include="Resource\Character\attack\character_right_attack3_2.bmp" />
     <Image Include="Resource\Character\character_climb1.bmp" />
     <Image Include="Resource\Character\character_climb2.bmp" />
+    <Image Include="Resource\Character\character_left_die1.bmp" />
+    <Image Include="Resource\Character\character_left_die2.bmp" />
     <Image Include="Resource\Character\character_left_jump.bmp" />
     <Image Include="Resource\Character\character_left_lie.bmp" />
     <Image Include="Resource\Character\character_left_stand.bmp" />
     <Image Include="Resource\Character\character_left_walk1.bmp" />
     <Image Include="Resource\Character\character_left_walk2.bmp" />
+    <Image Include="Resource\Character\character_right_die1.bmp" />
+    <Image Include="Resource\Character\character_right_die2.bmp" />
     <Image Include="Resource\Character\character_right_jump.bmp" />
     <Image Include="Resource\Character\character_right_lie.bmp" />
     <Image Include="Resource\Character\character_right_stand.bmp" />
     <Image Include="Resource\Character\character_right_walk1.bmp" />
     <Image Include="Resource\Character\character_right_walk2.bmp" />
+    <Image Include="Resource\gameover.bmp" />
     <Image Include="Resource\menu.bmp" />
     <Image Include="Resource\Monster\green\green_left1.bmp" />
     <Image Include="Resource\Monster\green\green_left2.bmp" />
@@ -454,8 +459,10 @@
     <Image Include="Resource\Stage2BG.bmp" />
     <Image Include="Resource\stage2text.bmp" />
     <Image Include="Resource\Stage3BG.bmp" />
+    <Image Include="Resource\stage3text.bmp" />
     <Image Include="Resource\startbutton.bmp" />
     <Image Include="Resource\startbutton2.bmp" />
+    <Image Include="Resource\success.bmp" />
     <Image Include="res\bitmap3.bmp" />
     <Image Include="res\bitmap7.bmp" />
     <Image Include="res\game.ico" />
